Added code to parse jvm-config options from domain.xml and use them when starting the server.  For now, enable this capability with -J-Dglassfish.use.jvm.config=true